admin and salesman priority this means whcich work do admin,salesman

--- a/public/backend/assets/css/style.css
+++ b/public/backend/assets/css/style.css
@@ -506,6 +506,8 @@ body.sidebar-gone .main-content {
 }
 .main-navbar .header-brand .header-brand-img {
 	margin-right: 0;
+	width: 170px;
+	height: 60px;
 }
 .app-header1 .header-brand {
 	color: inherit;
